<resources>
    <string name="app_name">Weather++</string>
    <string name="title_activity_settings">Weather++ Settings</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="temperature_textview">%1$s/%2$s</string>
    <string name="city_textview">%1$s, %2$s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_select_temperature_units">Select Temperature Units</string>
    <string-array name="pref_temperature_units_array">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_temperature_units_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_temperature_units">Temperature Units</string>
    <string name="pref_temperature_display_summary">Choose between Kelvin, Celsius, and Fahrenheit</string>
    <string name="pref_days_in_forecast">Days in Forecast</string>
    <string name="pref_set_days_in_forecast">Set the amount of days in the forecast:</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="weather_icon_description">An icon that displays what kind of weather we have on this day.</string>
    <string name="kelvin">Kelvin</string>
</resources>
